Frontend erstellt und verbindung zwischen frontend und backend erstellt