@@ -9,15 +9,22 @@ import com.yildiz.teamsync.entities.User;
 import com.yildiz.teamsync.enums.UserRole;
 
 import com.yildiz.teamsync.repositories.UserRepository;
+import com.yildiz.teamsync.repositories.TeamMemberRepository; // Added
 import com.yildiz.teamsync.services.IOrganizationManagementService;
+
+import com.yildiz.teamsync.config.SecurityUtils; // Restored original import path
 
 @Service
 public class OrganizationManagementService implements IOrganizationManagementService {
 	
 	private final UserRepository userRepository;
+	private final SecurityUtils securityUtils;
+	private final TeamMemberRepository teamMemberRepository; // Added
 
-	public OrganizationManagementService(UserRepository userRepository) {
+	public OrganizationManagementService(UserRepository userRepository, SecurityUtils securityUtils, TeamMemberRepository teamMemberRepository) { // Modified constructor
 		this.userRepository=userRepository;
+		this.securityUtils = securityUtils;
+		this.teamMemberRepository = teamMemberRepository; // Initialized
 	}
 
     ///////////////////////////////
@@ -27,26 +34,38 @@ public class OrganizationManagementService implements IOrganizationManagementSer
     ///////////////////////////////
 	@Override
 	public List<UserListResponseDTO> getAllEmployees(Long organizationID) {
-	    // 1. Entity-Liste aus DB holen
-	    List<User> users = userRepository.findAllByOrganization_OrganizationID(organizationID);
-	    
-	    if (users.isEmpty()) {
-	        throw new RuntimeException("Keine Mitarbeiter für diese Organisation gefunden.");
-	    }
-	    
-	    return users.stream().map(user -> {
+		
+        User currentAdmin = getAuthenticatedUser();
+        Long adminOrgID = currentAdmin.getOrganization().getOrganizationID();
+
+        // Überprüft ob der angemeldete Admin und die gesuchte Org-ID zusammenpasst
+        if (!adminOrgID.equals(organizationID)) {
+            throw new RuntimeException("Unbefugter Zugriff auf diese Organisation!");
+        }
+
+	    List<User> employees = userRepository.findAllByOrganization_OrganizationID(organizationID); // Restored correct name
+	    return employees.stream().map(emp -> { // Changed variable name
 	        UserListResponseDTO dto = new UserListResponseDTO();
-	        dto.setUserID(user.getUserID());
-	        dto.setUserName(user.getUserName());
-	        dto.setUserLastName(user.getUserLastName());
-	        dto.setUserEmail(user.getUserEmail());
-	        dto.setOnline(user.isOnline());
-	        dto.setRole(user.getRole());
-	        if (user.getOrganization() != null) {
-	            dto.setOrganizationID(user.getOrganization().getOrganizationID());
+	        dto.setUserID(emp.getUserID());
+	        dto.setUserName(emp.getUserName());
+	        dto.setUserLastName(emp.getUserLastName());
+	        dto.setUserEmail(emp.getUserEmail());
+	        dto.setOnline(emp.isOnline());
+	        dto.setRole(emp.getRole());
+	        
+	        if (emp.getOrganization() != null) {
+	            dto.setOrganizationID(emp.getOrganization().getOrganizationID());
 	        }
+	        
+	        // Hole die Teams des Nutzers
+	        java.util.List<String> teamNames = teamMemberRepository.findByUser_UserID(emp.getUserID())
+	            .stream()
+	            .map(tm -> tm.getTeam().getTeamName())
+	            .collect(java.util.stream.Collectors.toList());
+	        dto.setTeams(teamNames);
+	        
 	        return dto;
-	    }).toList();
+	    }).collect(java.util.stream.Collectors.toList()); // Changed to collect
 	}
 
     ///////////////////////////////
@@ -70,6 +89,26 @@ public class OrganizationManagementService implements IOrganizationManagementSer
 	    userRepository.save(user);
 	}
 
+    ///////////////////////////////
+    ///							///
+    ///     Role Entfernen    	///
+    ///							///
+    ///////////////////////////////
+	@Override
+	public void demoteToUser(Long userID) {
+		User currentAdmin = getAuthenticatedUser();
+	    Long adminOrgID = currentAdmin.getOrganization().getOrganizationID();
+	    
+	    User user = userRepository.findById(userID)
+	            .orElseThrow(() -> new RuntimeException("User nicht gefunden."));
+	
+	    if (!user.getOrganization().getOrganizationID().equals(adminOrgID)) {
+	        throw new RuntimeException("Unbefugter Zugriff!");
+	    }
+	    
+	    user.setRole(UserRole.USER);
+	    userRepository.save(user);
+	}
 
     ///////////////////////////////
     ///							///
@@ -103,7 +142,6 @@ public class OrganizationManagementService implements IOrganizationManagementSer
     ///							///
     ///////////////////////////////
     private User getAuthenticatedUser() {
-        
-        return userRepository.findById(1L).get(); 
+        return securityUtils.getCurrentUserEntity();
     }
 }
